# GUI-Pilot

./: .env.example  .gitignore  README.md  SUBMISSION_SOP.md  doubao_seed_api_test.py  note.md  pyproject.toml  python.md  task.md
code-for-student/: agent.py
docs/: architecture.md  competition-adapter.md  regression-notes.md  strategy-profiles.md
examples/: api_smoke_test.py  quickstart_deep.py  quickstart_lite.py
examples/competition_submission/doc/: algorithm_design.md
examples/official_runner/: README.md
gui_pilot/: __init__.py  agent.py  config.py  parser.py  postprocess.py  schema.py  task_parser.py  vision.py  vlm.py  workflows.py
gui_pilot/deep/: __init__.py  arbiter.py  critic.py  cropper.py  memory.py  planner.py  sampler.py
gui_pilot/profiles/: __init__.py  deep.py  lite.py
submission/doc/: algorithm_design.md  算法设计说明文档.md
submission/src/: agent.py
submit_log/: README.md  submission_20260410_multisamplecritic_cap2_parallel_v1_log.md  v1._log.md  v10_log_1.md  v10_log_2.md  v11e_vlmonly_log.md  v12a_log.md  v5b_log.md  v6_log.md  v7c_log.md  v8_log.md  v9_2_log.md  v9_log.md  visible_case_regression.md
submit_log/archive_redundant/: v11_f_log.md  v11_g_log.md  v11e_joint_log.md  v2_log.md  v7_log.md
submit_version/: KEEPERS.md
tests/: test_gui_pilot.py
tools/: check_submission.py
