[project]
name = "uv-doc-zh"
version = "0.1.0"
description = "一个用 Rust 编写的极其快速的 Python 包和项目管理器。"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material>=9.6.15",
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
#url = "https://mirrors.tencentyun.com/pypi/simple/" # 内网